karl package Changelog
======================

Unreleased
----------

- Fixed a bug in mailin where we were trying to decode headers twice, once in
  repoze.postoffice, and then once again in our processor.

- IE8 button display fixes (LP #610549)

3.39 (2010-07-29)

-----------------
- reduced width on login username input for IE6, so it doesn't
  fall to the next line.  Set margin on surrounding field as
  !important, because elements were jumping after focus was moved
  away (LP #611017)

- removed unnecessary margin from profile image, so the middle content
  doesn't get pushed down (LP #610666)

- fixed add tag button on edit screen for IE8 (LP #610549)

- edited the admin right side portlets to match new portlet styles (LP #610493)

- Added support for logging each query, to compare performance across
  different configurations. Keyed on the `query_log_all` parameter, defaulting
  to False. Entries will be added to `log/query/everything.log`.

- Fixed bug in mailin2 script that caused ZEO connections to be left open if
  there was a configuration error.

- Fixed bug in entity conversion where numeric entities were not converted.

- Removed a redundant copy of the text_scrubber code used by mailin.

- Add some preprocessing to the mailin text scrubber to find URLs and mark
  them up as links using markdown syntax.  (LP #545420)

- Reproduced the websites normalization performed when editing a profile via
  the UI in the cico XML import, so that profile websites data downloaded from
  GSA will also be normalized by prepending 'http://' to websites which begin
  with 'www.'.  Also added an evolve script to normalize the websites field for
  existing profiles.  (LP #605203)

- Convert non-standard mimetypes sent by Internet Explorer for jpeg and png
  image files to their more standard equivalents.  (LP #608473)

- Made all unknown image/* types viewable in default mime info.  (LP #608473)

- Added a utility and console script for renaming users. (LP #606339)
